Fixed programming exercise timeline overflow

--- a/src/main/webapp/app/exercises/programming/shared/lifecycle/programming-exercise-test-schedule-picker.scss
+++ b/src/main/webapp/app/exercises/programming/shared/lifecycle/programming-exercise-test-schedule-picker.scss
@@ -1,6 +1,5 @@
 .timeline-box {
     padding: 10px 0;
-    overflow-x: scroll;
 }
 
 .test-schedule-date p {
